--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -44,7 +44,7 @@
       "page" : "Covid19",
       "path" : "/covid19",
       "autoRefresh" : "true",
-      "searchUrl" : "/apis/search/",
+      "searchUrl" : "/apis/corona/search/",
       "auth" : "open",
       "defaultLocation" : "21.12549763660629,26.367187500000004",
       "zoom" : 3,
