--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 redis.host=127.0.0.1
 redis.port=6379
+auth.enabled=false
 googleauth.domain=<your domain to enable SSO>
 tileserver.url=<tile server url>
 tileserver.id=<tile server id>
