Pulling api key from config.ini file

--- a/config.ini
+++ b/config.ini
@@ -6,3 +6,4 @@ tileserver.url=<tile server url>
 tileserver.id=<tile server id>
 google.clientid=<google client id for SSO>
 admin.email=<first user who will have admin privileges>
+googlemapsapikey=<google maps api key>
